test/spec_vectors/simd_i32x4_cmp/fail/module_6.wat
(module (func (result v128) (i32x4.le_s (i32.const 0) (f32.const 0))))